--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --config jest.config.js",
-    "pre-commit":"npm run jest"
+    "pre-commit":"npm run test"
   },
   "keywords": [],
   "author": "",
