--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --config jest.config.js",
-    "pre-commit": "npm run test"
+    "test": "jest --config jest.config.js"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run pre-commit"
+      "pre-commit": "npm run test"
     }
   },
   "keywords": [],
